tests/integration/targets/playbooks/provision_playbook/enterprise-example.com/platform/jenkins/default/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: tavros
    kubernetes.io/ingress.class: prod
    konghq.com/strip-path: 'true'
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: '302'
spec:
  rules:
  - host: ci.tavros.enterprise-example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-operator-http-tavros
          servicePort: 8080
  tls:
  - hosts:
    - ci.tavros.enterprise-example.com
    secretName: ci-ingress-cert
